get a quote page revisited and overflow-x bug  on mobile view fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ body {
     overflow-x: hidden;
 }
 
+.body-wrapper {
+    overflow-x: hidden;
+}
+
 
 /* ---------------------------Fonts & Colours------------------------------- */
 
@@ -303,152 +307,119 @@ body {
 
 /* ---------------------------Get a Quote Page------------------------------- */
 
-
-/*----------------INPUTS----------------*/
-
-.row {
-    margin: 0;
+.form-section {
+    padding: 6px 0;
 }
 
-input {
-    border-color: rgba(8, 175, 158, 0.4);
-    border-radius: 4px;
-    border-style: solid;
-    border-width: 1px;
-    padding: 2px 8px;
-    margin-left: 10px;
-    background-color: rgba(255, 255, 255, .9);
+.form-section-heading {
+    padding: 2% 0;
 }
 
-input [type=text] {
-    min-width: 30%;
-}
-
-input[type=radio] {
-    margin: 0;
-    padding: 0;
-}
-
-input[type=number] {
-    width: 40px;
-}
-
-.form-heading {
-    margin: 0;
-    padding: 15px 0px;
-    width: 100%;
-}
-
-.form-content-container {
-    padding: 20px 0px;
-    display: flex;
-    flex-direction: column;
+.form-control {
+    max-width: 20%;
+    vertical-align: middle;
 }
 
 .form-step-one {
-    margin: 0;
-    padding: 0;
-    padding: 5px 0;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
+    min-width: 200px;
 }
 
-.form-step-two {
-    margin: 0;
-    padding: 0;
-    padding: 5px 0;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+.form-icon {
+    vertical-align: middle;
+    color: rgb(8, 175, 158);
+    padding-right: 20px;
 }
 
-.form-text-area {
+.form-labels {
     margin: 0;
-    padding: 0;
+    padding: 0 1%;
     text-align: center;
-    align-items: center;
-    justify-content: center;
 }
 
-.form-text-area label {
-    width: 90%;
-    padding-top: 30px;
-    margin-top: 30px;
-    /* display: block; */
+.form-inputs {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+select {
+    max-width: 60%;
 }
 
 textarea {
-    border-color: rgba(8, 175, 158, 0.4);
-    border-radius: 4px;
-    border-style: solid;
-    width: 100%;
-    height: 180px;
+    min-width: 100%;
 }
 
-.hidden-div {
-    width: 100%;
-    visibility: hidden;
-}
-
-.form-step-two label {
-    left: 10%;
-}
-
-@media screen and (min-width:768px) {
-    .form-step-two {
-        text-align: left;
-        align-items: left;
-        justify-content: left;
-    }
-    .form-step-two label {
-        float: right;
-        margin-right: 20px;
-    }
-    .form-step-two input {
-        margin-left: 20px;
-    }
-    .form-step-two select {
-        margin-left: 20px;
-    }
+#inlineFormInputGroup {
+    min-width: 60%;
 }
 
 .form-submit-button {
+    min-width: 90%;
     text-align: center;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
 }
 
-.form-submit-button .btn {
-    background-color: rgb(64, 224, 208);
-    color: rgba(255, 255, 255, .8);
-    font-weight: 800;
-    transition: all 150ms ease-in-out;
+.submit-button-container {
+    margin-top: 10px;
+    margin-bottom: 40px;
+    text-align: center;
 }
 
-.has-printer-in-mind {
-    width: 100%;
-    height: 0;
-    visibility: collapse;
-    display: flex;
-    flex-direction: column;
+
+/* the following code for styling the custom bootstrap radio buttons was taken from
+https://stackoverflow.com/questions/48401587/bootstrap4-radio-button-background-and-fill-color*/
+
+.custom-radio .custom-control-input:checked~.custom-control-label::before,
+.custom-radio .custom-control-input:checked~.custom-control-label::after {
+    background-color: rgb(8, 175, 158);
+    border-radius: 50%;
 }
 
-.no-printer-in-mind {
-    width: 100%;
-    visibility: visible;
-    height: 100%;
+.custom-radio .custom-control-input:focus~.custom-control-label::before {
+    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(8, 175, 158, 0.25);
 }
 
-input[type=checkbox]:checked~.has-printer-in-mind {
-    visibility: visible;
-    height: 100%;
+
+/*with thanks to https://stackoverflow.com/users/8270343/webdevbooster for the solution */
+
+
+/* likewise the following code for styling the shadows and outlines on bootstrap inputs was taken from
+https://stackoverflow.com/questions/14820952/change-bootstrap-input-focus-blue-glow */
+
+.form-control:focus {
+    border-color: rgb(8, 175, 158);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(8, 175, 158, 0.6);
 }
 
-input[type=checkbox]:checked~.no-printer-in-mind {
-    visibility: collapse;
-    height: 0;
+.custom-select:focus {
+    border-color: rgb(8, 175, 158);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(8, 175, 158, 0.6);
+}
+
+
+/*with thanks to https://stackoverflow.com/users/1680535/igaster for the solution*/
+
+@media screen and (min-width: 768px) {
+    .form-labels {
+        margin: 0;
+        padding: 0;
+        padding-right: 15px;
+        padding-top: 10px;
+        text-align: right;
+    }
+    .form-inputs {
+        margin: 0;
+        padding: 0;
+        padding-left: 15px;
+        padding-top: 10px;
+        text-align: left;
+        vertical-align: middle;
+    }
+    .form-submit-button {
+        min-width: 100%;
+    }
 }
 
 
